# qfortress-mirror

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.txt
core/: CMakeLists.txt  buffer.cc  buffer.hh  cmdline.cc  components.cc  components.hh  concepts.hh  image.cc  image.hh  paths.cc  paths.hh  resource.cc  resource.hh  version.hh
core/bsp/: mesh.cc  mesh.hh  node.hh  portal.hh  pvis.cc  pvis.hh  pvs.cc  pvs.hh  tree.cc  tree.hh
core/config/: boolean.cc  map.hh  string.cc  string.hh  value.cc
core/entity/: current_leaf.cc  transform.cc  transform.hh
core/level/: level.cc  vertex.hh
core/math/: camera.hh
core/utils/: epoch.cc  string.cc  string.hh
game/client/: CMakeLists.txt  game.cc  game.hh  globals.cc  globals.hh  main.cc  main.hh  pch.hh  video.cc  video.hh
game/client/config/: key_binding.cc  key_binding.hh
game/launch/: CMakeLists.txt  launch.cc
game/shared/: CMakeLists.txt  globals.cc  globals.hh  pch.hh
main/: CMakeLists.txt  main.cc
media/: test.map
render/: backend.hh  frontend.hh  texture2D.hh
render/modern/: CMakeLists.txt  experimental.cc  experimental.hh  globals.cc  globals.hh  impl_backend.cc  impl_frontend.cc  impl_texture2D.cc  pch.hh
render/modern/gpu/: static_buffer.cc  static_buffer.hh  stream_buffer.cc  stream_buffer.hh
render/modern/hlsl/: experimental.frag.hlsl  experimental.vert.hlsl
scripts/: build-unix-debug.sh  build-unix-release.sh  build-win32-debug.bat  build-win32-release.bat  build-win64-debug.bat  build-win64-release.bat  generate-binarray.py  generate-thirdparty.py  package-unix.sh  package-win32-nsis.bat  package-win32-zip.bat  package-win64-nsis.bat  package-win64-zip.bat
src/: CMakeLists.txt
src/client/: CMakeLIsts.txt  CMakeLists.txt  game.cc  game.hh  globals.cc  globals.hh  main.cc  main.hh  pch.hh  render.hh  renderer.hh  video.cc  video.hh
src/client/res/: texture2D.hh
src/client_modern/: CMakeLists.txt  experimental.cc  experimental.hh  globals.cc  globals.hh  pch.hh  render.cc  renderer.cc  renderer_backend.cc
src/client_modern/res/: texture2D.cc
src/client_modern/shaders/: experimental.vert.hlsl  triangle.frag.hlsl  triangle.vert.hlsl
src/client_modern/utils/: basic_buffer.cc  basic_buffer.hh  buffer.cc  buffer.hh  shader.cc  shader.hh  static_buffer.cc  static_buffer.hh  stream_buffer.cc  stream_buffer.hh
src/core/: CMakeLists.txt  cmdline.hh  concepts.hh  exceptions.hh  pch.hh  version.cc.in
src/core/config/: arithmetic.hh  boolean.hh  map.cc  value.hh
src/core/entity/: components.cc  components.hh  current_leaf.cc  current_leaf.hh  transform.cc  transform.hh
src/core/level/: bnode.cc  bnode.hh  level.cc  level.hh  loader.cc  loader.hh
src/core/math/: camera.cc
src/core/res/: image.cc  image.hh  resource.cc  resource.hh
src/core/utils/: epoch.hh  physfs.cc  physfs.hh
src/game/: CMakeLIsts.txt
src/main/: CMakeLists.txt  main.cc
src/shared/: CMakeLists.txt  globals.cc  globals.hh  pch.hh
tools/geomp/: CMakeLists.txt  main.cc  mapfile.cc  mapfile.hh  pch.hh
